src/objects/marketing_campaigns_properties__x.object
<CustomObject>
    <fields>
        <fullName>f_adw_24__c</fullName>
        <description>f_adw_24</description>
        <externalDeveloperName>f_adw_24</externalDeveloperName>
        <label>f_adw_24</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_adw_trip_12__c</fullName>
        <description>f_adw_trip_12</description>
        <externalDeveloperName>f_adw_trip_12</externalDeveloperName>
        <label>f_adw_trip_12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_adw_trip_6__c</fullName>
        <description>f_adw_trip_6</description>
        <externalDeveloperName>f_adw_trip_6</externalDeveloperName>
        <label>f_adw_trip_6</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_avgbet_game_12mn_ap_ah__c</fullName>
        <description>f_avgbet_game_12mn_ap_ah</description>
        <externalDeveloperName>f_avgbet_game_12mn_ap_ah</externalDeveloperName>
        <label>f_avgbet_game_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_avgbet_game_1mn_ap_ah__c</fullName>
        <description>f_avgbet_game_1mn_ap_ah</description>
        <externalDeveloperName>f_avgbet_game_1mn_ap_ah</externalDeveloperName>
        <label>f_avgbet_game_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_avgbet_game_3mn_ap_ah__c</fullName>
        <description>f_avgbet_game_3mn_ap_ah</description>
        <externalDeveloperName>f_avgbet_game_3mn_ap_ah</externalDeveloperName>
        <label>f_avgbet_game_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_daily_act_ap_pdb_12mn_plus__c</fullName>
        <description>f_daily_act_ap_pdb_12mn_plus</description>
        <externalDeveloperName>f_daily_act_ap_pdb_12mn_plus</externalDeveloperName>
        <label>f_daily_act_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_daily_act_ap_pdb_24mn_plus__c</fullName>
        <description>f_daily_act_ap_pdb_24mn_plus</description>
        <externalDeveloperName>f_daily_act_ap_pdb_24mn_plus</externalDeveloperName>
        <label>f_daily_act_ap_pdb_24mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_daily_theo_ap_pdb_12mnplus__c</fullName>
        <description>f_daily_theo_ap_pdb_12mnplus</description>
        <externalDeveloperName>f_daily_theo_ap_pdb_12mnplus</externalDeveloperName>
        <label>f_daily_theo_ap_pdb_12mnplus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_daily_theo_ap_pdb_24mnplus__c</fullName>
        <description>f_daily_theo_ap_pdb_24mnplus</description>
        <externalDeveloperName>f_daily_theo_ap_pdb_24mnplus</externalDeveloperName>
        <label>f_daily_theo_ap_pdb_24mnplus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_daily_wrth_ap_pdb_12mnplus__c</fullName>
        <description>f_daily_wrth_ap_pdb_12mnplus</description>
        <externalDeveloperName>f_daily_wrth_ap_pdb_12mnplus</externalDeveloperName>
        <label>f_daily_wrth_ap_pdb_12mnplus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_daily_wrth_ap_pdb_24mnplus__c</fullName>
        <description>f_daily_wrth_ap_pdb_24mnplus</description>
        <externalDeveloperName>f_daily_wrth_ap_pdb_24mnplus</externalDeveloperName>
        <label>f_daily_wrth_ap_pdb_24mnplus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_hotel_adw_12__c</fullName>
        <description>f_hotel_adw_12</description>
        <externalDeveloperName>f_hotel_adw_12</externalDeveloperName>
        <label>f_hotel_adw_12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_hotel_adw_15__c</fullName>
        <description>f_hotel_adw_15</description>
        <externalDeveloperName>f_hotel_adw_15</externalDeveloperName>
        <label>f_hotel_adw_15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_hotel_adw_24__c</fullName>
        <description>f_hotel_adw_24</description>
        <externalDeveloperName>f_hotel_adw_24</externalDeveloperName>
        <label>f_hotel_adw_24</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_hotel_adw__c</fullName>
        <description>f_hotel_adw</description>
        <externalDeveloperName>f_hotel_adw</externalDeveloperName>
        <label>f_hotel_adw</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_htlsty_pct_ap_pdb_12mnplus__c</fullName>
        <description>f_htlsty_pct_ap_pdb_12mnplus</description>
        <externalDeveloperName>f_htlsty_pct_ap_pdb_12mnplus</externalDeveloperName>
        <label>f_htlsty_pct_ap_pdb_12mnplus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_htlsty_pct_ap_pdb_24mnplus__c</fullName>
        <description>f_htlsty_pct_ap_pdb_24mnplus</description>
        <externalDeveloperName>f_htlsty_pct_ap_pdb_24mnplus</externalDeveloperName>
        <label>f_htlsty_pct_ap_pdb_24mnplus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_lodging_pct_mkt_adj_ah__c</fullName>
        <description>f_lodging_pct_mkt_adj_ah</description>
        <externalDeveloperName>f_lodging_pct_mkt_adj_ah</externalDeveloperName>
        <label>f_lodging_pct_mkt_adj_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_ofr_trp_pct_ap_pdb12mnplus__c</fullName>
        <description>f_ofr_trp_pct_ap_pdb12mnplus</description>
        <externalDeveloperName>f_ofr_trp_pct_ap_pdb12mnplus</externalDeveloperName>
        <label>f_ofr_trp_pct_ap_pdb12mnplus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_ofr_trp_pct_ap_pdb24mnplus__c</fullName>
        <description>f_ofr_trp_pct_ap_pdb24mnplus</description>
        <externalDeveloperName>f_ofr_trp_pct_ap_pdb24mnplus</externalDeveloperName>
        <label>f_ofr_trp_pct_ap_pdb24mnplus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_pct_bacarrat_mkt_ah__c</fullName>
        <description>f_pct_bacarrat_mkt_ah</description>
        <externalDeveloperName>f_pct_bacarrat_mkt_ah</externalDeveloperName>
        <label>f_pct_bacarrat_mkt_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_pct_blackjack_mkt_ah__c</fullName>
        <description>f_pct_blackjack_mkt_ah</description>
        <externalDeveloperName>f_pct_blackjack_mkt_ah</externalDeveloperName>
        <label>f_pct_blackjack_mkt_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_pct_craps_mkt_ah__c</fullName>
        <description>f_pct_craps_mkt_ah</description>
        <externalDeveloperName>f_pct_craps_mkt_ah</externalDeveloperName>
        <label>f_pct_craps_mkt_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_pct_other_mkt_ah__c</fullName>
        <description>f_pct_other_mkt_ah</description>
        <externalDeveloperName>f_pct_other_mkt_ah</externalDeveloperName>
        <label>f_pct_other_mkt_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_pct_paigow_mkt_ah__c</fullName>
        <description>f_pct_paigow_mkt_ah</description>
        <externalDeveloperName>f_pct_paigow_mkt_ah</externalDeveloperName>
        <label>f_pct_paigow_mkt_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_pct_roulette_mkt_ah__c</fullName>
        <description>f_pct_roulette_mkt_ah</description>
        <externalDeveloperName>f_pct_roulette_mkt_ah</externalDeveloperName>
        <label>f_pct_roulette_mkt_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_pct_video_poker_mkt_ah__c</fullName>
        <description>f_pct_video_poker_mkt_ah</description>
        <externalDeveloperName>f_pct_video_poker_mkt_ah</externalDeveloperName>
        <label>f_pct_video_poker_mkt_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_profit_pct_ent__c</fullName>
        <description>f_profit_pct_ent</description>
        <externalDeveloperName>f_profit_pct_ent</externalDeveloperName>
        <label>f_profit_pct_ent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_profit_pct_mkt__c</fullName>
        <description>f_profit_pct_mkt</description>
        <externalDeveloperName>f_profit_pct_mkt</externalDeveloperName>
        <label>f_profit_pct_mkt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_property_worth__c</fullName>
        <description>f_property_worth</description>
        <externalDeveloperName>f_property_worth</externalDeveloperName>
        <label>f_property_worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_rc_earned_12mn_mkt_ah__c</fullName>
        <description>f_rc_earned_12mn_mkt_ah</description>
        <externalDeveloperName>f_rc_earned_12mn_mkt_ah</externalDeveloperName>
        <label>f_rc_earned_12mn_mkt_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_rc_earned_1mn_mkt_ah__c</fullName>
        <description>f_rc_earned_1mn_mkt_ah</description>
        <externalDeveloperName>f_rc_earned_1mn_mkt_ah</externalDeveloperName>
        <label>f_rc_earned_1mn_mkt_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_rc_earned_3mn_mkt_ah__c</fullName>
        <description>f_rc_earned_3mn_mkt_ah</description>
        <externalDeveloperName>f_rc_earned_3mn_mkt_ah</externalDeveloperName>
        <label>f_rc_earned_3mn_mkt_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_resp_rate_ap_pdb_12mn_plus__c</fullName>
        <description>f_resp_rate_ap_pdb_12mn_plus</description>
        <externalDeveloperName>f_resp_rate_ap_pdb_12mn_plus</externalDeveloperName>
        <label>f_resp_rate_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_resp_rate_ap_pdb_24mn_plus__c</fullName>
        <description>f_resp_rate_ap_pdb_24mn_plus</description>
        <externalDeveloperName>f_resp_rate_ap_pdb_24mn_plus</externalDeveloperName>
        <label>f_resp_rate_ap_pdb_24mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_slot_pct_ap_pdb_12mn_plus__c</fullName>
        <description>f_slot_pct_ap_pdb_12mn_plus</description>
        <externalDeveloperName>f_slot_pct_ap_pdb_12mn_plus</externalDeveloperName>
        <label>f_slot_pct_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_slot_pct_ap_pdb_24mn_plus__c</fullName>
        <description>f_slot_pct_ap_pdb_24mn_plus</description>
        <externalDeveloperName>f_slot_pct_ap_pdb_24mn_plus</externalDeveloperName>
        <label>f_slot_pct_ap_pdb_24mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all_12mn_ap_ah__c</fullName>
        <description>f_theo_all_12mn_ap_ah</description>
        <externalDeveloperName>f_theo_all_12mn_ap_ah</externalDeveloperName>
        <label>f_theo_all_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all_1mn_ap_ah__c</fullName>
        <description>f_theo_all_1mn_ap_ah</description>
        <externalDeveloperName>f_theo_all_1mn_ap_ah</externalDeveloperName>
        <label>f_theo_all_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all_3mn_ap_ah__c</fullName>
        <description>f_theo_all_3mn_ap_ah</description>
        <externalDeveloperName>f_theo_all_3mn_ap_ah</externalDeveloperName>
        <label>f_theo_all_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all_ap_pdb_12mn_plus__c</fullName>
        <description>f_theo_all_ap_pdb_12mn_plus</description>
        <externalDeveloperName>f_theo_all_ap_pdb_12mn_plus</externalDeveloperName>
        <label>f_theo_all_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all_ap_pdb_24mn_plus__c</fullName>
        <description>f_theo_all_ap_pdb_24mn_plus</description>
        <externalDeveloperName>f_theo_all_ap_pdb_24mn_plus</externalDeveloperName>
        <label>f_theo_all_ap_pdb_24mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all_ytd_ap_ah__c</fullName>
        <description>f_theo_all_ytd_ap_ah</description>
        <externalDeveloperName>f_theo_all_ytd_ap_ah</externalDeveloperName>
        <label>f_theo_all_ytd_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_slot_12mn_ap_ah__c</fullName>
        <description>f_theo_slot_12mn_ap_ah</description>
        <externalDeveloperName>f_theo_slot_12mn_ap_ah</externalDeveloperName>
        <label>f_theo_slot_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_slot_1mn_ap_ah__c</fullName>
        <description>f_theo_slot_1mn_ap_ah</description>
        <externalDeveloperName>f_theo_slot_1mn_ap_ah</externalDeveloperName>
        <label>f_theo_slot_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_slot_3mn_ap_ah__c</fullName>
        <description>f_theo_slot_3mn_ap_ah</description>
        <externalDeveloperName>f_theo_slot_3mn_ap_ah</externalDeveloperName>
        <label>f_theo_slot_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_table_12mn_ap_ah__c</fullName>
        <description>f_theo_table_12mn_ap_ah</description>
        <externalDeveloperName>f_theo_table_12mn_ap_ah</externalDeveloperName>
        <label>f_theo_table_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_table_1mn_ap_ah__c</fullName>
        <description>f_theo_table_1mn_ap_ah</description>
        <externalDeveloperName>f_theo_table_1mn_ap_ah</externalDeveloperName>
        <label>f_theo_table_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_table_3mn_ap_ah__c</fullName>
        <description>f_theo_table_3mn_ap_ah</description>
        <externalDeveloperName>f_theo_table_3mn_ap_ah</externalDeveloperName>
        <label>f_theo_table_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_tier_score_ah__c</fullName>
        <description>f_tier_score_ah</description>
        <externalDeveloperName>f_tier_score_ah</externalDeveloperName>
        <label>f_tier_score_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trip_cycle_12__c</fullName>
        <description>f_trip_cycle_12</description>
        <externalDeveloperName>f_trip_cycle_12</externalDeveloperName>
        <label>f_trip_cycle_12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trip_cycle_48__c</fullName>
        <description>f_trip_cycle_48</description>
        <externalDeveloperName>f_trip_cycle_48</externalDeveloperName>
        <label>f_trip_cycle_48</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trp_all_adj_sc_pdb_12mn__c</fullName>
        <description>f_trp_all_adj_sc_pdb_12mn</description>
        <externalDeveloperName>f_trp_all_adj_sc_pdb_12mn</externalDeveloperName>
        <label>f_trp_all_adj_sc_pdb_12mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trp_all_adj_sc_pdb_24mn__c</fullName>
        <description>f_trp_all_adj_sc_pdb_24mn</description>
        <externalDeveloperName>f_trp_all_adj_sc_pdb_24mn</externalDeveloperName>
        <label>f_trp_all_adj_sc_pdb_24mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trp_all_adj_sc_pdb_36mn__c</fullName>
        <description>f_trp_all_adj_sc_pdb_36mn</description>
        <externalDeveloperName>f_trp_all_adj_sc_pdb_36mn</externalDeveloperName>
        <label>f_trp_all_adj_sc_pdb_36mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trp_rtd_adj_sc_pdb_12mn__c</fullName>
        <description>f_trp_rtd_adj_sc_pdb_12mn</description>
        <externalDeveloperName>f_trp_rtd_adj_sc_pdb_12mn</externalDeveloperName>
        <label>f_trp_rtd_adj_sc_pdb_12mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trp_rtd_adj_sc_pdb_24mn__c</fullName>
        <description>f_trp_rtd_adj_sc_pdb_24mn</description>
        <externalDeveloperName>f_trp_rtd_adj_sc_pdb_24mn</externalDeveloperName>
        <label>f_trp_rtd_adj_sc_pdb_24mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trp_rtd_adj_sc_pdb_36mn__c</fullName>
        <description>f_trp_rtd_adj_sc_pdb_36mn</description>
        <externalDeveloperName>f_trp_rtd_adj_sc_pdb_36mn</externalDeveloperName>
        <label>f_trp_rtd_adj_sc_pdb_36mn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_worth_12mn_ap_ah__c</fullName>
        <description>f_worth_12mn_ap_ah</description>
        <externalDeveloperName>f_worth_12mn_ap_ah</externalDeveloperName>
        <label>f_worth_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_worth_1mn_ap_ah__c</fullName>
        <description>f_worth_1mn_ap_ah</description>
        <externalDeveloperName>f_worth_1mn_ap_ah</externalDeveloperName>
        <label>f_worth_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_worth_3mn_ap_ah__c</fullName>
        <description>f_worth_3mn_ap_ah</description>
        <externalDeveloperName>f_worth_3mn_ap_ah</externalDeveloperName>
        <label>f_worth_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_worth__c</fullName>
        <description>f_worth</description>
        <externalDeveloperName>f_worth</externalDeveloperName>
        <label>f_worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_worth_all_ytd_ap_ah__c</fullName>
        <description>f_worth_all_ytd_ap_ah</description>
        <externalDeveloperName>f_worth_all_ytd_ap_ah</externalDeveloperName>
        <label>f_worth_all_ytd_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_age__c</fullName>
        <description>i_age</description>
        <externalDeveloperName>i_age</externalDeveloperName>
        <label>i_age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_age_adj_ah__c</fullName>
        <description>i_age_adj_ah</description>
        <externalDeveloperName>i_age_adj_ah</externalDeveloperName>
        <label>i_age_adj_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_days_rtd_12mn_ap_ah__c</fullName>
        <description>i_days_rtd_12mn_ap_ah</description>
        <externalDeveloperName>i_days_rtd_12mn_ap_ah</externalDeveloperName>
        <label>i_days_rtd_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_days_rtd_1mn_ap_ah__c</fullName>
        <description>i_days_rtd_1mn_ap_ah</description>
        <externalDeveloperName>i_days_rtd_1mn_ap_ah</externalDeveloperName>
        <label>i_days_rtd_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_days_rtd_3mn_ap_ah__c</fullName>
        <description>i_days_rtd_3mn_ap_ah</description>
        <externalDeveloperName>i_days_rtd_3mn_ap_ah</externalDeveloperName>
        <label>i_days_rtd_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_days_rtd_ap_pdb_12mn_plus__c</fullName>
        <description>i_days_rtd_ap_pdb_12mn_plus</description>
        <externalDeveloperName>i_days_rtd_ap_pdb_12mn_plus</externalDeveloperName>
        <label>i_days_rtd_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_days_rtd_ap_pdb_24mn_plus__c</fullName>
        <description>i_days_rtd_ap_pdb_24mn_plus</description>
        <externalDeveloperName>i_days_rtd_ap_pdb_24mn_plus</externalDeveloperName>
        <label>i_days_rtd_ap_pdb_24mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_days_since_gaming__c</fullName>
        <description>i_days_since_gaming</description>
        <externalDeveloperName>i_days_since_gaming</externalDeveloperName>
        <label>i_days_since_gaming</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_days_since_last__c</fullName>
        <description>i_days_since_last</description>
        <externalDeveloperName>i_days_since_last</externalDeveloperName>
        <label>i_days_since_last</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <description>i_dmid</description>
        <externalDeveloperName>i_dmid</externalDeveloperName>
        <label>i_dmid</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_dob_mn_adj_ah__c</fullName>
        <description>i_dob_mn_adj_ah</description>
        <externalDeveloperName>i_dob_mn_adj_ah</externalDeveloperName>
        <label>i_dob_mn_adj_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_dob_yr_adj_ah__c</fullName>
        <description>i_dob_yr_adj_ah</description>
        <externalDeveloperName>i_dob_yr_adj_ah</externalDeveloperName>
        <label>i_dob_yr_adj_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_email_decile__c</fullName>
        <description>i_email_decile</description>
        <externalDeveloperName>i_email_decile</externalDeveloperName>
        <label>i_email_decile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lodging_pct__c</fullName>
        <description>i_lodging_pct</description>
        <externalDeveloperName>i_lodging_pct</externalDeveloperName>
        <label>i_lodging_pct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lop_first_day_mkt_ah__c</fullName>
        <description>i_lop_first_day_mkt_ah</description>
        <externalDeveloperName>i_lop_first_day_mkt_ah</externalDeveloperName>
        <label>i_lop_first_day_mkt_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lop_first_hr_mkt_ah__c</fullName>
        <description>i_lop_first_hr_mkt_ah</description>
        <externalDeveloperName>i_lop_first_hr_mkt_ah</externalDeveloperName>
        <label>i_lop_first_hr_mkt_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lop_first_trp_mkt_ah__c</fullName>
        <description>i_lop_first_trp_mkt_ah</description>
        <externalDeveloperName>i_lop_first_trp_mkt_ah</externalDeveloperName>
        <label>i_lop_first_trp_mkt_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lop_game_12mn_ap_ah__c</fullName>
        <description>i_lop_game_12mn_ap_ah</description>
        <externalDeveloperName>i_lop_game_12mn_ap_ah</externalDeveloperName>
        <label>i_lop_game_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lop_game_1mn_ap_ah__c</fullName>
        <description>i_lop_game_1mn_ap_ah</description>
        <externalDeveloperName>i_lop_game_1mn_ap_ah</externalDeveloperName>
        <label>i_lop_game_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_lop_game_3mn_ap_ah__c</fullName>
        <description>i_lop_game_3mn_ap_ah</description>
        <externalDeveloperName>i_lop_game_3mn_ap_ah</externalDeveloperName>
        <label>i_lop_game_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_profitable_pct__c</fullName>
        <description>i_profitable_pct</description>
        <externalDeveloperName>i_profitable_pct</externalDeveloperName>
        <label>i_profitable_pct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_prop_pct_worth_1__c</fullName>
        <description>i_prop_pct_worth_1</description>
        <externalDeveloperName>i_prop_pct_worth_1</externalDeveloperName>
        <label>i_prop_pct_worth_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_prop_pct_worth_2__c</fullName>
        <description>i_prop_pct_worth_2</description>
        <externalDeveloperName>i_prop_pct_worth_2</externalDeveloperName>
        <label>i_prop_pct_worth_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_random_1__c</fullName>
        <description>i_random_1</description>
        <externalDeveloperName>i_random_1</externalDeveloperName>
        <label>i_random_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_random_2__c</fullName>
        <description>i_random_2</description>
        <externalDeveloperName>i_random_2</externalDeveloperName>
        <label>i_random_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_random_static_yr__c</fullName>
        <description>i_random_static_yr</description>
        <externalDeveloperName>i_random_static_yr</externalDeveloperName>
        <label>i_random_static_yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_all_cms_12mn_ap_ah__c</fullName>
        <description>i_trp_all_cms_12mn_ap_ah</description>
        <externalDeveloperName>i_trp_all_cms_12mn_ap_ah</externalDeveloperName>
        <label>i_trp_all_cms_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_all_cms_1mn_ap_ah__c</fullName>
        <description>i_trp_all_cms_1mn_ap_ah</description>
        <externalDeveloperName>i_trp_all_cms_1mn_ap_ah</externalDeveloperName>
        <label>i_trp_all_cms_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_all_cms_3mn_ap_ah__c</fullName>
        <description>i_trp_all_cms_3mn_ap_ah</description>
        <externalDeveloperName>i_trp_all_cms_3mn_ap_ah</externalDeveloperName>
        <label>i_trp_all_cms_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_rtd_12mn_ap_ah__c</fullName>
        <description>i_trp_rtd_12mn_ap_ah</description>
        <externalDeveloperName>i_trp_rtd_12mn_ap_ah</externalDeveloperName>
        <label>i_trp_rtd_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_rtd_1mn_ap_ah__c</fullName>
        <description>i_trp_rtd_1mn_ap_ah</description>
        <externalDeveloperName>i_trp_rtd_1mn_ap_ah</externalDeveloperName>
        <label>i_trp_rtd_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_rtd_3mn_ap_ah__c</fullName>
        <description>i_trp_rtd_3mn_ap_ah</description>
        <externalDeveloperName>i_trp_rtd_3mn_ap_ah</externalDeveloperName>
        <label>i_trp_rtd_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_rtd_ap_pdb_12mn_plus__c</fullName>
        <description>i_trp_rtd_ap_pdb_12mn_plus</description>
        <externalDeveloperName>i_trp_rtd_ap_pdb_12mn_plus</externalDeveloperName>
        <label>i_trp_rtd_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trp_rtd_ap_pdb_24mn_plus__c</fullName>
        <description>i_trp_rtd_ap_pdb_24mn_plus</description>
        <externalDeveloperName>i_trp_rtd_ap_pdb_24mn_plus</externalDeveloperName>
        <label>i_trp_rtd_ap_pdb_24mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ttm_trip_cnt_12__c</fullName>
        <description>i_ttm_trip_cnt_12</description>
        <externalDeveloperName>i_ttm_trip_cnt_12</externalDeveloperName>
        <label>i_ttm_trip_cnt_12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ttm_trip_cnt_24__c</fullName>
        <description>i_ttm_trip_cnt_24</description>
        <externalDeveloperName>i_ttm_trip_cnt_24</externalDeveloperName>
        <label>i_ttm_trip_cnt_24</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Marketing Campaign Properties</label>
    <pluralLabel>Marketing Campaign Properties</pluralLabel>
</CustomObject>